syntax = "proto3";

package adapter.v1;

option go_package = "scylla-grpc-adapter/gen/adapter/v1;adapterv1";

service AdapterService {
  rpc Post (PostRequest) returns (PostResponse) {}
}

message PostRequest {
  string value = 1;
}

message PostResponse {
  string message = 1;
}
